--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">FileIO example</string>
+    <string name="title_activity_list_prod">ListProd</string>
+    <string name="title_home">All Products</string>
+    <string name="title_dashboard">Cart</string>
+    <string name="title_notifications">All Order at this store</string>
 </resources>
