Added RecyclerViewHolder and ProdListAdapter files in cart fragment (dashboard) to create the recyclerview for displaying products in cart.(Not finished). Added frame_cart.xml for recyclerview layout.(Not finished). Creating Customer classes for recording behaviours of customers. --Zhuocheng

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="order_details">Order Details</string>
     <string name="customer_name">Customer Name:</string>
     <string name="date_placed">Date Placed:</string>
+    <string name="order_file">Orders.txt</string>
 </resources>
