Finished the functionality of Order_Details Screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="customer_name">Customer Name:</string>
     <string name="date_placed">Date Placed:</string>
     <string name="order_file">Orders.txt</string>
+    <string name="B2">B2</string>
+    <string name="Check">Mark Order as Complete</string>
 </resources>
